# htmx

./: Cargo.toml  LICENSE  README.md
frontend/: index.html
src/: main.rs
