[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-server = { version = "0.6.0", features = [] }
axum = { version = "0.7.4", features = ["json"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
