[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-server = { version = "0.6.0", features = [] }
axum = { version = "0.7.4", features = ["json"] }
clap = {version = "4.1.6", features = ["derive", "env"] }
chrono = { version = "0.4.35" }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
